--- a/ui_controller/.vscode/settings.json
+++ b/ui_controller/.vscode/settings.json
@@ -57,6 +57,7 @@
         "led_driver.h": "c",
         "screen_manager.h": "c",
         "brightness.h": "c",
-        "esp_http_client.h": "c"
+        "esp_http_client.h": "c",
+        "wifi_manager.h": "c"
     }
 }
