--- a/ui_controller/main/CMakeLists.txt
+++ b/ui_controller/main/CMakeLists.txt
@@ -3,4 +3,4 @@ file(GLOB_RECURSE FONTS_SRCS "pages/fonts/*.c")
 
 idf_component_register(SRCS "main.c" "globals.c" ${PAGE_SRCS} ${FONTS_SRCS}
                        INCLUDE_DIRS "." "pages"
-                       REQUIRES lvgl display_drivers wifi_manager)
+                       REQUIRES lvgl display_drivers wifi_manager esp_now_driver)
