--- a/led_controller/main/CMakeLists.txt
+++ b/led_controller/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c"
                        INCLUDE_DIRS "."
-                       REQUIRES led_drivers)
+                       REQUIRES led_drivers esp_now_driver)
