--- a/ui_controller/components/wifi_manager/CMakeLists.txt
+++ b/ui_controller/components/wifi_manager/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "wifi_manager.c" "weather_info.c"
                     INCLUDE_DIRS "include" "."
-                    REQUIRES driver esp_wifi esp_http_client nvs_flash lwip esp-tls json)
+                    REQUIRES driver esp_wifi esp_http_client nvs_flash lwip esp-tls json freertos)
